@@ -1,5 +1,10 @@
 2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* drivers/storage/class2/class2.c: Add @implemented and @unimplemented
+	to APIs.
+
+2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* lib/advapi32/misc/shutdown.c: Add @implemented and @unimplemented
 	to APIs.
 	* lib/advapi32/misc/stubs.c: Ditto.
